// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Level 1 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 2.25em;
  font-weight: normal;
  -webkit-letter-spacing: -0.028em;
  -moz-letter-spacing: -0.028em;
  -ms-letter-spacing: -0.028em;
  letter-spacing: -0.028em;
  margin: 1em 0;
}

<h1
    class="emotion-0"
    id="heading-1"
  >
    Heading 1
  </h1>
</DocumentFragment>
`;

exports[`Heading Level 2 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 2em;
  font-weight: normal;
  margin: 1em 0 0.25em;
}

<h2
    class="emotion-0"
    id="heading-2"
  >
    Heading 2
  </h2>
</DocumentFragment>
`;

exports[`Heading Level 3 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 1.75em;
  font-weight: normal;
  margin: 1em 0 0.25em;
}

<h3
    class="emotion-0"
    id="heading-3"
  >
    Heading 3
  </h3>
</DocumentFragment>
`;

exports[`Heading Level 4 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 1.5em;
  font-weight: normal;
  margin: 1em 0 0.25em;
}

<h4
    class="emotion-0"
    id="heading-4"
  >
    Heading 4
  </h4>
</DocumentFragment>
`;

exports[`Heading Level 5 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 1.25em;
  font-weight: normal;
  margin: 1em 0 0.25em;
}

<h5
    class="emotion-0"
    id="heading-5"
  >
    Heading 5
  </h5>
</DocumentFragment>
`;

exports[`Heading Level 6 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 1.125em;
  font-weight: normal;
  margin: 1em 0 0.25em;
}

<h6
    class="emotion-0"
    id="heading-6"
  >
    Heading 6
  </h6>
</DocumentFragment>
`;
